# PrivateEye

./: .gitignore  .robuild.yaml  GNUmakefile  LICENSE  Makefile  README.md  ReadMe  SetPaths,feb  buildit.sh  common.mk
apps/PrivateEye/!PrivatEye/: !Boot,feb  !Help  !Help,feb  !Run,feb  !RunDF,feb  !RunMC,feb  !RunRedr,feb  !Sprites,ff9  CMakeLists.txt  MakeMake,fd7  MakeRelease,feb  TemplateMF  actions.c  actions.h  canvas.c  canvas.h  choices-colour.c  choices-colour.h  choicesdat.c  choicesdat.h  clipboard.c  clipboard.h  dataxfer.c  display.c  display.h  effects.c  effects.h  eye.c  ffg.c  globals.c  globals.h  iconbar.c  iconbar.h  imagecache.c  imagecache.h  imgcache.c  imgcache.h  info.c  info.h  keymap.c  (+22 more)
apps/PrivateEye/!PrivatEye/Resources/: Keys  Sprites,ff9
apps/TagCloud/!TagCloud/: !Boot,feb  !Help  !Run,feb  !RunDF,feb  !Sprites,ff9  CMakeLists.txt  GNUmakefile  app.h  globals.c  iconbar.c  iconbar.h  makecloud.c  makecloud.h  menunames.h  tags.c
libs/appengine/: CMakeLists.txt  GNUmakefile  MakeMake,fd7  TemplateMF  types.h
libs/appengine/app/: choices.h  keymap.h  wire.h
libs/appengine/app/choices/: choices.c
libs/appengine/app/keymap/: keymap.c
libs/appengine/app/wire/: wire.c
libs/appengine/base/: appengine.h  bitwise.h  bsearch.h  bytesex.h  errors.h  fxp.h  heap.h  messages.h  numstr.h  os.h  oserror.h  pack.h  primes.h  strings.h  utils.h
libs/appengine/base/appengine/: heap.c  resource.c  xappengine_codec_op_base64_decode.s  xappengine_codec_op_base64_encode.s  xappengine_heap_claim.s  xappengine_heap_create_dynamic.s  xappengine_heap_delete.s  xappengine_heap_release.s  xappengine_heap_resize.s  xappengine_resource_op_locate.s
libs/appengine/base/bitwise/: ceillog2.c  clz.c  countbits.c  ctz.c  floorlog2.c  msb.c  power2gt.c  power2le.c  reversebits.c  util.h
libs/appengine/base/bsearch/: bsearch-impl.h  bsearch-int.c  bsearch-short.c  bsearch-uint.c  bsearch-ushort.c
libs/appengine/base/bytesex/: rev-l-block.c  rev-l-m.c  rev-l.c  rev-s-block.c  rev-s-m.c  rev-s-pair-m.c  rev-s-pair.c  rev-s.c  util.h
libs/appengine/base/errors/: errors.c  fatal.c
libs/appengine/base/fxp/: smull-fxp16.c  umull-fxp16.c
libs/appengine/base/heap/: heap.c  xosheap_resize_r3.s
libs/appengine/base/messages/: messages.c
libs/appengine/base/numstr/: comma-dbl.c  comma-num.c
libs/appengine/base/os/: beep.c  getmodver.c  inkey.c
libs/appengine/base/oserror/: check.c  plot.c  report-block.c  report.c
libs/appengine/base/pack/: pack.c  unpack.c
libs/appengine/base/primes/: primes.c
libs/appengine/base/strings/: str_branch.c  str_cpy.c  str_dup.c  str_leaf.c  str_len.c  str_n_cpy.c  str_n_dup.c  str_num.c  str_term.c  strcasecmp.c  strncasecmp.c  strnncasecmp.c
libs/appengine/base/utils/: degs-to-rads.c  gcd.c
libs/appengine/cmake/: riscos.cmake
libs/appengine/databases/: digest-db.h  filename-db.h  pickle-reader-hash.h  pickle-writer-hash.h  pickle.h  tag-db.h
libs/appengine/databases/digest-db/: digest-db.c
libs/appengine/databases/filename-db/: filename-db.c
libs/appengine/databases/pickle/: delete.c  hash-reader.c  hash-writer.c  pickle.c  unpickle.c
libs/appengine/databases/tag-db/: tag-db.c
libs/appengine/datastruct/: array.h  atom.h  bitarr.h  bitvec.h  dict.h  hash.h  hlist.h  list.h  ntree.h  vector.h
libs/appengine/datastruct/array/: delelem.c  delelems.c  grow.c  shrinkwrap.c  squeeze.c  stretch.c
libs/appengine/datastruct/atom/: create.c  delete-block.c  delete.c  destroy.c  for-block.c  get.c  impl.h  new.c  set.c
libs/appengine/datastruct/bitarr/: count.c
libs/appengine/datastruct/bitvec/: and.c  clear-all.c  clear.c  count.c  create.c  destroy.c  ensure.c  eq.c  get.c  impl.h  length.c  next.c  or.c  set-all.c  set.c  toggle.c
libs/appengine/datastruct/dict/: add.c  create.c  delete-index.c  delete.c  destroy.c  impl.h  index.c  rename.c  string-len.c  string.c
libs/appengine/datastruct/hash/: create.c  destroy.c  impl.c  impl.h  insert.c  lookup-node.c  lookup.c  remove.c  walk-cont.c  walk.c
libs/appengine/dialogues/: dcs-quit.h  info.h  name.h  prog-info.h  save.h  scale.h
libs/appengine/gadgets/: card.h  effects.h  filerwin.h  hist.h  iconbar.h  imageobwin.h  metadata.h  scroll-list.h  slider.h  tag-cloud.h  tonemap-gadget.h  treeview.h
libs/appengine/geom/: box.h  layout.h  packer.h  trfm.h
libs/appengine/geom/box/: grow.c  (+10 more)
libs/appengine/graphics/: artworks.h  awrender.h  colour.h  drawable.h  image-observer.h  image.h  imagecache.h  jpegtran.h  sprite-effects.h  stage.h  thumbnail.h  tonemap.h
libs/appengine/io/: basic.h  filing.h  md5.h  stream-mem.h  stream-mtfcomp.h  stream-packbits.h  stream-stdio.h  stream.h
libs/appengine/net/: internet.h
libs/appengine/test/: txtscr.h
libs/appengine/text/: txtfmt.h
libs/appengine/vdu/: font.h  screen.h  sprite.h
libs/appengine/wimp/: colourpick.h  dialogue.h  event.h  filer.h  help.h  icon.h  iconbar.h  menu.h  pointer.h  window.h
libs/exiftags/: CHANGES  CMakeLists.txt  GNUmakefile  MakeMake,fd7  README  TemplateMF  asahi.c  canon.c  casio.c  exif.c  exif.h  exifgps.c  exifint.h  exifutil.c  fuji.c  jpeg.c  jpeg.h  leica.c  makers.c  makers.h  minolta.c  nikon.c  olympus.c  panasonic.c  sanyo.c  sigma.c  tagdefs.c  timevary.c  timevary.h
libs/exiftags/other/: exifcom.c  exiftags.c  exiftime.c  getopt.c  makers_stub.c
libs/fortify/: CMakeLists.txt  GNUmakefile  Makefile,fe1  MakefileRO,fe1  fortify.c  test.c  test2.c  ufortify.h
libs/jpeg/: CMakeLists.txt  GNUmakefile  MakefileRO,fe1  ansi2knr.c  jcinit.c  jconfig.h  jctrans.c  jdmaster.c  jdtrans.c  jmemro.c  jmorecfg.h
libs/md5/: CMakeLists.txt  GNUmakefile  MakeMake,fd7  TemplateMF  md5.c  md5.h
libs/md5/other/: main.c
libs/png/: CMakeLists.txt  GNUmakefile  MakefileRO,fe1  pngconf.h
libs/zlib/: CMakeLists.txt  GNUmakefile  MakefileRO,fe1  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  minigzip.c  trees.c  uncompr.c  zconf.h  zconf.in.h  zutil.c  zutil.h
utils/templheader/: CMakeLists.txt  GNUmakefile  MakeMake,fd7  TemplateMF  templheadr.c
(+507 files in other folders)
